src/regression/parse_pool/progtest11.sfp.out

sfc in program: parse_pool/progtest11.sfp
syntax error at 5 at line:
from any foo when bar
         ^
